<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/todo_background_todo_app"
        android:orientation="vertical"
        tools:context=".todoapp.TodoActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="40dp"
            android:text="@string/todo_title"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:text="@string/todo_categories"
            android:textAllCaps="true"
            android:textColor="@color/todo_subtitle_text"

            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_tasks"
            style="@style/TodoSubtitle"

            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTasks"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:layout_height="wrap_content"
            />

    </LinearLayout>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src ="@android:drawable/ic_input_add"
        app:tint ="@color/white"
        app:fabSize="normal"
        app:backgroundTint="@color/todo_accent"
        android:layout_marginVertical="60dp"
        android:layout_marginHorizontal="10dp"
        android:padding="30dp"
        android:layout_gravity="end|bottom"

        >

    </com.google.android.material.floatingactionbutton.FloatingActionButton>


</FrameLayout>
