<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="18dp"
    android:paddingVertical="32dp"
    android:background="@color/background_app"
    tools:context=".imccalculator.imcCalculatorActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/viewMale"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/background_component_selected"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@+id/viewFemale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_male"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/male"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/viewFemale"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/background_component_selected"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewMale"
        app:layout_constraintTop_toTopOf="parent">



        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_female"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/female"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>
    
    <androidx.cardview.widget.CardView
        android:id="@+id/viewHeight"
        android:layout_width="0dp"
        android:layout_marginTop="32dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/background_component"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewMale"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="16dp">
      <androidx.appcompat.widget.LinearLayoutCompat
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="16dp"
          android:orientation="vertical"
          android:gravity="center"
          >

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@color/title_text"
              android:textAllCaps="true"
              android:text="@string/height"
              />


          <TextView
              android:id="@+id/tvHeight"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="120 cm"
              android:textStyle="bold"
              android:textSize="38sp"
              android:textColor="@color/white"
              />

          <com.google.android.material.slider.RangeSlider
              android:id="@+id/rsHeight"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:stepSize="1"
              android:valueFrom="120"
              android:valueTo="200"
              />


      </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>
    
     <androidx.cardview.widget.CardView
         android:id="@+id/viewWeight"
         android:layout_width="150dp"
         android:layout_marginTop="20dp"
         app:cardBackgroundColor="@color/background_component_selected"
         app:cardCornerRadius="16dp"
         app:layout_constraintTop_toBottomOf="@+id/viewHeight"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/viewAge"
         android:layout_height="150dp">


         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical">


             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/title_text"
                 android:textAllCaps="true"
                 android:text="@string/weight"
                 />


             <TextView
                 android:id="@+id/tvWeight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="60"
                 android:textStyle="bold"
                 android:textSize="38sp"
                 android:textColor="@color/white"
                 />

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:gravity="center"
                 >
                 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/btnSubtractWeight"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_remove"
                     app:backgroundTint="@color/background_fab"
                     app:tint = "@color/white"
                     android:layout_marginEnd="8dp"
                     >
                 </com.google.android.material.floatingactionbutton.FloatingActionButton>
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/btnPlusWeight"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_plus"
                     app:tint = "@color/white"
                     app:backgroundTint="@color/background_fab"

                     >
                 </com.google.android.material.floatingactionbutton.FloatingActionButton>

             </LinearLayout>





         </LinearLayout>

     </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewAge"
        android:layout_width="150dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/background_component_selected"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHeight"
        app:layout_constraintStart_toEndOf="@+id/viewWeight"
        android:layout_height="150dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/title_text"
                android:textAllCaps="true"
                android:text="@string/age"
                />


            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="60"
                android:textStyle="bold"
                android:textSize="38sp"
                android:textColor="@color/white"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubtractAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_remove"
                    app:backgroundTint="@color/background_fab"
                    app:tint = "@color/white"
                    android:layout_marginEnd="8dp"
                    >
                </com.google.android.material.floatingactionbutton.FloatingActionButton>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnPlusAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_plus"
                    app:tint = "@color/white"
                    app:backgroundTint="@color/background_fab"

                    >
                </com.google.android.material.floatingactionbutton.FloatingActionButton>

            </LinearLayout>





        </LinearLayout>

    </androidx.cardview.widget.CardView>
    
    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/calculate"
        />
</androidx.constraintlayout.widget.ConstraintLayout>